nova/nova/templates/ingress-osapi.yaml
---
# Source: nova/templates/ingress-osapi.yaml

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nova
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    
spec:
  rules:
    - host: nova
      http:
        paths:
          - path: /
            backend:
              serviceName: nova-api
              servicePort: n-api
    - host: nova.openstack
      http:
        paths:
          - path: /
            backend:
              serviceName: nova-api
              servicePort: n-api
    - host: nova.openstack.svc.cluster.local
      http:
        paths:
          - path: /
            backend:
              serviceName: nova-api
              servicePort: n-api
